<resources>
<string name="localization_name">English</string>
<string name="localization_choice">Language</string>
<string name="dialog_add">Add</string>
<string name="dialog_remove">Remove</string>
<string name="search_button">Search</string>
<string name="login_server">API Server URL</string>
<string name="login_name">Username</string>
<string name="login_password">Password</string>
<string name="login_button">Login</string>
<string name="selection_warehouse">Selected warehouse</string>
<string name="selection_warehouse_null">No warehouse selected</string>
<string name="warehouse_id">Id</string>
<string name="warehouse_name">Name</string>
<string name="warehouse_address">Address</string>
<string name="warehouse_lat">Warehouse latitude</string>
<string name="warehouse_lon">Warehouse longitude</string>
<string name="warehouse_null">No warehouse selected</string>
<string name="warehouse_any">Any warehouse</string>
<string name="warehouse_not_selected">No warehouse selected</string>
<string name="warehouse_fail_list">Failed to retrieve warehouse list</string>
<string name="warehouse_fail_get">Failed to retrieve warehouse details</string>
<string name="warehouse_fail_get_403">Forbidden: Access denied</string>
<string name="warehouse_fail_get_404">Not found: Warehouse does not exist</string>
<string name="warehouse_fail_modify">Failed to modify warehouse</string>
<string name="warehouse_fail_modify_403">Forbidden: Access denied to modify warehouse</string>
<string name="warehouse_fail_modify_404">Not found: Warehouse does not exist for modification</string>
<string name="warehouse_fail_create">Failed to create warehouse</string>
<string name="warehouse_fail_create_403">Forbidden: Access denied to create warehouse</string>
<string name="warehouse_fail_create_409">Conflict: Warehouse already exists</string>
<string name="warehouse_fail_move">Failed to move warehouse</string>
<string name="warehouse_fail_move_403">Forbidden: Access denied to move warehouse</string>
<string name="warehouse_fail_move_404">Not found: Warehouse does not exist for move</string>
<string name="warehouse_fail_move_409">Conflict: Warehouse already moved</string>
<string name="warehouse_fail_delete">Failed to delete warehouse</string>
<string name="warehouse_fail_delete_403">Forbidden: Access denied to delete warehouse</string>
<string name="warehouse_fail_delete_404">Not found: Warehouse does not exist for deletion</string>
<string name="tab_users">Users</string>
<string name="tab_warehouses">Warehouses</string>
<string name="tab_items">Items</string>
<string name="tab_units">Units</string>
<string name="tab_storages">Storages</string>
<string name="tab_search">Search</string>
<string name="tab_operations">Operations</string>
<string name="itemstack_warehouse">Warehouse</string>
<string name="itemstack_storage">Storage</string>
<string name="itemstack_type">Type</string>
<string name="itemstack_lot">Lot</string>
<string name="itemstack_serial">Serial</string>
<string name="itemstack_manufacturer_serial">Manufacturer serial</string>
<string name="itemstack_amount">Amount</string>
<string name="itemstack_available">Available</string>
<string name="item_any">All items</string>
<string name="item_id">Id</string>
<string name="item_name">Name</string>
<string name="item_unit">Unit</string>
<string name="item_fail_list">Failed to retrieve item list</string>
<string name="item_fail_get">Failed to retrieve item details</string>
<string name="item_fail_get_403">Forbidden: Access denied to retrieve item</string>
<string name="item_fail_get_404">Not found: Item does not exist</string>
<string name="item_fail_modify">Failed to modify item</string>
<string name="item_fail_modify_403">Forbidden: Access denied to modify item</string>
<string name="item_fail_modify_404">Not found: Item does not exist for modification</string>
<string name="item_fail_create">Failed to create item</string>
<string name="item_fail_create_403">Forbidden: Access denied to create item</string>
<string name="item_fail_create_409">Conflict: Item already exists</string>
<string name="item_fail_move">Failed to move item</string>
<string name="item_fail_move_403">Forbidden: Access denied to move item</string>
<string name="item_fail_move_404">Not found: Item does not exist for move</string>
<string name="item_fail_move_409">Conflict: Item already moved</string>
<string name="item_fail_delete">Failed to delete item</string>
<string name="item_fail_delete_403">Forbidden: Access denied to delete item</string>
<string name="item_fail_delete_404">Not found: Item does not exist for deletion</string>
<string name="search_warehouse">Show warehouses</string>
<string name="search_storage">Show storages</string>
<string name="search_lot">Show lots</string>
<string name="search_serial">Show serials</string>
<string name="storage_id">Id</string>
<string name="storage_name">Name</string>
<string name="storage_null">No storage selected</string>
<string name="storage_any">Any storage</string>
<string name="storage_fail_list">Failed to retrieve storage list</string>
<string name="storage_fail_get">Failed to retrieve storage details</string>
<string name="storage_fail_get_403">Forbidden: Access denied to retrieve storage</string>
<string name="storage_fail_get_404">Not found: Storage does not exist</string>
<string name="storage_fail_modify">Failed to modify storage</string>
<string name="storage_fail_modify_403">Forbidden: Access denied to retrieve storage</string>
<string name="storage_fail_modify_404">Not found: Storage does not exist for modification</string>
<string name="storage_fail_create">Failed to create storage</string>
<string name="storage_fail_create_403">Forbidden: Access denied to modify storage</string>
<string name="storage_fail_create_409">Conflict: Storage already exist</string>
<string name="storage_fail_move">Failed to move storage</string>
<string name="storage_fail_move_403">Forbidden: Access denied to move storage</string>
<string name="storage_fail_move_404">Not found: Storage does not exist for move</string>
<string name="storage_fail_move_409">Conflict: Storage already moved</string>
<string name="storage_fail_delete">Failed to delete storage</string>
<string name="storage_fail_delete_403">Forbidden: Access denied to delete storage</string>
<string name="storage_fail_delete_404">Not found: Storage does not exist for deletion</string>
<string name="operation_id">Id</string>
<string name="operation_name">Name</string>
<string name="operation_is_add">Insertion operation</string>
<string name="operation_item_storage">Storage</string>
<string name="operation_item_type">Item</string>
<string name="operation_item_lot">Lot</string>
<string name="operation_item_serial">Serial</string>
<string name="operation_item_manufacturer_serial">Manufacturer serial</string>
<string name="operation_item_amount">Amount</string>
<string name="operation_fail_list">Failed to retrieve operation list</string>
<string name="operation_fail_get">Failed to retrieve operation details</string>
<string name="operation_fail_get_403">Forbidden: Access denied to retrieve operation</string>
<string name="operation_fail_get_404">Not found: Operation does not exist</string>
<string name="operation_fail_create">Failed to create operation</string>
<string name="operation_fail_create_403">Forbidden: Access denied to create operation</string>
<string name="operation_fail_create_409">Conflict: Operation already exists</string>
<string name="operation_fail_commit">Failed to commit operation</string>
<string name="operation_fail_commit_403">Forbidden: Access denied to commit operation</string>
<string name="operation_fail_commit_404">Not found: Operation does not exist for commit</string>
<string name="operation_fail_cancel">Failed to cancel operation</string>
<string name="operation_fail_cancel_403">Forbidden: Access denied to cancel operation</string>
<string name="operation_fail_cancel_404">Not found: Operation does not exist for cancellation</string>
<string name="unit_null">No unit selected</string>
<string name="unit_id">Id</string>
<string name="unit_name">Name</string>
<string name="unit_fail_list">Failed to retrieve unit list</string>
<string name="unit_fail_get">Failed to retrieve unit details</string>
<string name="unit_fail_get_403">Forbidden: Access denied to retrieve unit</string>
<string name="unit_fail_get_404">Not found: Unit does not exist</string>
<string name="unit_fail_modify">Failed to modify unit</string>
<string name="unit_fail_modify_403">Forbidden: Access denied to modify unit</string>
<string name="unit_fail_modify_404">Not found: Unit does not exist for modification</string>
<string name="unit_fail_create">Failed to create unit</string>
<string name="unit_fail_create_403">Forbidden: Access denied to create unit</string>
<string name="unit_fail_create_409">Conflict: Unit already exists</string>
<string name="unit_fail_move">Failed to move unit</string>
<string name="unit_fail_move_403">Forbidden: Access denied to move unit</string>
<string name="unit_fail_move_404">Not found: Unit does not exist for move</string>
<string name="unit_fail_move_409">Conflict: Unit already moved</string>
<string name="unit_fail_delete">Failed to delete unit</string>
<string name="unit_fail_delete_403">Forbidden: Access denied to delete unit</string>
<string name="unit_fail_delete_404">Not found: Unit does not exist for deletion</string>
<string name="user_id">Username</string>
<string name="user_name">Name</string>
<string name="user_manager">Manager</string>
<string name="tab_statistics">Statistics</string>
<string name="statistics_items">Items</string>
<string name="statistics_items_warehouse">Warehouse</string>
<string name="statistics_items_storage">Storage</string>
<string name="statistics_items_operation">Operation</string>
<string name="statistics_items_start_amount">Starting quantity</string>
<string name="statistics_items_min">Minimum quantity</string>
<string name="statistics_items_max">Maximum quantity</string>
<string name="statistics_items_added">Added items statistics</string>
<string name="statistics_items_removed">Removed items statistics</string>
<string name="statistics_items_moved">Moved items statistics</string>
<string name="statistics_from">Start date</string>
<string name="statistics_to">End date</string>
<string name="statistics_show">Show statistics</string>
<string name="list_archived">List archived data</string>
<string name="authorization_system_view_warehouses">View warehouses</string>
<string name="authorization_system_delete_warehouses">Delete warhauses</string>
<string name="authorization_system_create_warehouses">Create warehouses</string>
<string name="authorization_system_modify_warehouses">Modify warhouses</string>
<string name="authorization_system_delete_types">Delete types</string>
<string name="authorization_system_create_types">Create types</string>
<string name="authorization_system_modify_types">Modify types</string>
<string name="authorization_system_view_users">View users</string>
<string name="authorization_system_delete_users">Delete users</string>
<string name="authorization_system_create_users">Create users</string>
<string name="authorization_system_modify_users">Modify users</string>
<string name="authorization_local_view">View</string>
<string name="authorization_local_create_add_operation">Create add operation</string>
<string name="authorization_local_create_remove_operation">Create remove operation</string>
<string name="authorization_local_handle_operation">Handle operation</string>
<string name="authorization_local_configure">Configure</string>
<string name="login_fail">Login failed</string>
<string name="user_edit">Edit user</string>
<string name="warehouse_edit">Edit warehouse</string>
<string name="user_password">Password</string>
<string name="tab_profile">Profile</string>
<string name="default_id">Random</string>
<string name="default_name">Default</string>
</resources>