<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/app_background"
    android:orientation="vertical">

    <include layout="@layout/edit_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?card_bg_start"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:labelFor="@id/editId"
                android:text="@string/item_id"
                tools:layout_editor_absoluteX="183dp"
                tools:layout_editor_absoluteY="33dp" />


            <EditText
                android:id="@+id/editId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:ems="10"
                android:hint="@string/default_id"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="LabelFor"
                tools:layout_editor_absoluteX="234dp"
                tools:layout_editor_absoluteY="58dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?card_bg_end"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:labelFor="@id/editName"
                android:text="@string/item_name"
                tools:layout_editor_absoluteX="183dp"
                tools:layout_editor_absoluteY="33dp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:ems="10"
                android:hint="@string/default_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="LabelFor"
                tools:layout_editor_absoluteX="234dp"
                tools:layout_editor_absoluteY="58dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>