<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/edit_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?card_bg_start"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:labelFor="@id/editId"
                    android:text="@string/operation_id"
                    tools:layout_editor_absoluteX="183dp"
                    tools:layout_editor_absoluteY="33dp" />


                <EditText
                    android:id="@+id/editId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:ems="10"
                    android:hint="@string/default_id"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="LabelFor"
                    tools:layout_editor_absoluteX="234dp"
                    tools:layout_editor_absoluteY="58dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?card_bg"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:labelFor="@id/editName"
                    android:text="@string/operation_name"
                    tools:layout_editor_absoluteX="183dp"
                    tools:layout_editor_absoluteY="33dp" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:ems="10"
                    android:hint="@string/default_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="LabelFor"
                    tools:layout_editor_absoluteX="234dp"
                    tools:layout_editor_absoluteY="58dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?card_bg_end"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/operation_is_add"
                    tools:layout_editor_absoluteX="183dp"
                    tools:layout_editor_absoluteY="33dp" />

                <CheckBox
                    android:id="@+id/is_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:minHeight="48dp"
                    tools:layout_editor_absoluteX="234dp"
                    tools:layout_editor_absoluteY="58dp" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="horizontal|vertical">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <TableLayout
                    android:id="@+id/table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />
            </HorizontalScrollView>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/dialog_add"
        app:srcCompat="@drawable/add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>